--- a/app/src/main/res/layout/item_recipe_card_back_content.xml
+++ b/app/src/main/res/layout/item_recipe_card_back_content.xml
@@ -6,100 +6,100 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/item_recipe_back_author_image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="4dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="2dp"
-        android:adjustViewBounds="true"
+        android:layout_marginTop="8dp"
+        android:src="@color/gray_200"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/gray_200"
-        tools:ignore="ContentDescription,RtlHardcoded" />
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/item_recipe_back_author_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="2dp"
         android:fontFamily="serif"
-        android:maxLines="2"
+        android:maxLines="1"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="10sp"
-        android:textStyle="italic"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/item_recipe_back_author_image"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/item_recipe_back_author_image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/item_recipe_back_author_image"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="RtlHardcoded,SmallSp"
+        app:layout_constraintVertical_bias="0.100000024"
         tools:text="Author first and last name" />
-
-    <TextView
-        android:id="@+id/item_recipe_back_source"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
-        android:layout_marginStart="2dp"
-        android:fontFamily="serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textSize="9sp"
-        android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/item_recipe_back_date"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/item_recipe_back_author_image"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_recipe_back_author_name"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="RtlHardcoded,SmallSp"
-        tools:text="Recipe source" />
 
     <TextView
         android:id="@+id/item_recipe_back_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="2dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginRight="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="2dp"
         android:fontFamily="serif"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textSize="9sp"
+        android:textSize="12sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/item_recipe_back_author_image"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/item_recipe_back_author_image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/item_recipe_back_author_image"
-        app:layout_constraintVertical_bias="1.0"
-        tools:ignore="RtlHardcoded,SmallSp"
+        app:layout_constraintVertical_bias="0.8"
         tools:text="Creation date" />
 
     <TextView
         android:id="@+id/item_recipe_back_description"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginLeft="2dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="2dp"
-        android:fontFamily="cursive"
+        android:layout_marginTop="8dp"
+        android:fontFamily="serif"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/item_recipe_back_bt_horizontal_divider"
+        android:textSize="16sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/item_recipe_back_source"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_recipe_back_author_image"
         app:layout_constraintVertical_bias="0.0"
-        tools:ignore="RtlHardcoded"
         tools:text="Recipe description" />
+
+    <TextView
+        android:id="@+id/item_recipe_back_source"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="2dp"
+        android:fontFamily="serif"
+        android:gravity="end"
+        android:maxLines="2"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="@+id/item_recipe_back_space_2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:text="Recipe source" />
 
     <!--Space with 1:1 aspect ratio - for front and back alignments-->
     <android.support.percent.PercentFrameLayout
@@ -121,7 +121,7 @@
     <Space
         android:id="@+id/item_recipe_back_space_2"
         android:layout_width="0dp"
-        android:layout_height="38dp"
+        android:layout_height="56dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_recipe_back_space_1_container" />
@@ -132,6 +132,7 @@
         android:layout_height="1dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
+        android:layout_marginTop="0dp"
         android:background="@color/gray_100"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -154,7 +155,7 @@
         android:id="@+id/item_recipe_back_bt_flip"
         style="@style/IconButton"
         android:layout_width="0dp"
-        android:layout_height="28dp"
+        android:layout_height="42dp"
         android:rotation="180"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -167,7 +168,7 @@
         android:id="@+id/item_recipe_back_bt_fav"
         style="@style/IconButton"
         android:layout_width="0dp"
-        android:layout_height="28dp"
+        android:layout_height="42dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/item_recipe_back_bt_vertical_divider"
         app:layout_constraintRight_toRightOf="parent"
