--- a/app/src/main/res/layout/fragment_list_refresh.xml
+++ b/app/src/main/res/layout/fragment_list_refresh.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_refresh_indicator"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,6 +10,8 @@
         android:id="@+id/list_refresh_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clipChildren="false"
         android:scrollbars="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:listitem="@layout/item_recipe_card" />
 </android.support.v4.widget.SwipeRefreshLayout>
