--- a/app/src/main/res/layout/item_recipe_card.xml
+++ b/app/src/main/res/layout/item_recipe_card.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_recipe_card_frame"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
@@ -29,6 +29,7 @@
         tools:visibility="visible">
 
         <include layout="@layout/item_recipe_card_front_content" />
+
     </android.support.v7.widget.CardView>
 
 </FrameLayout>
