--- a/app/src/main/res/layout/item_recipe_card_front_content.xml
+++ b/app/src/main/res/layout/item_recipe_card_front_content.xml
@@ -40,15 +40,16 @@
     <TextView
         android:id="@+id/item_recipe_front_name"
         android:layout_width="0dp"
-        android:layout_height="38dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
-        android:fontFamily="cursive"
+        android:layout_height="48dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="4dp"
+        android:fontFamily="serif"
         android:gravity="center_horizontal"
         android:maxLines="2"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="14sp"
+        android:textSize="18sp"
+        android:textStyle="italic"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -61,6 +62,7 @@
         android:layout_height="1dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
+        android:layout_marginTop="4dp"
         android:background="@color/gray_100"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -82,7 +84,7 @@
         android:id="@+id/item_recipe_front_bt_fav"
         style="@style/IconButton"
         android:layout_width="0dp"
-        android:layout_height="28dp"
+        android:layout_height="42dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/item_recipe_front_bt_vertical_divider"
         app:layout_constraintTop_toBottomOf="@+id/item_recipe_front_bt_horizontal_divider"
@@ -93,7 +95,7 @@
         android:id="@+id/item_recipe_front_bt_flip"
         style="@style/IconButton"
         android:layout_width="0dp"
-        android:layout_height="28dp"
+        android:layout_height="42dp"
         app:layout_constraintLeft_toRightOf="@+id/item_recipe_front_bt_vertical_divider"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_recipe_front_bt_horizontal_divider"
