--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -11,23 +11,25 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
+        android:alpha="0.4"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/gray_300" />
+        app:srcCompat="@color/gray_500"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/item_category_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
-        android:textSize="14sp"
-        android:textStyle="italic"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlHardcoded"
@@ -38,10 +40,10 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:indeterminate="true"
-        android:indeterminateTint="@color/white"
+        android:indeterminateTint="@color/primary"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlHardcoded"
@@ -51,12 +53,14 @@
         android:id="@+id/item_category_inner_list"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="0dp"
         android:clipChildren="true"
         android:clipToPadding="false"
         android:orientation="horizontal"
-        android:paddingLeft="220dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="180dp"
+        android:paddingTop="8dp"
         android:scrollbars="none"
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,6 +70,6 @@
         app:layout_constraintTop_toBottomOf="@+id/item_category_name"
         app:layout_constraintVertical_bias="1.0"
         tools:ignore="RtlHardcoded,RtlSymmetry"
-        tools:listitem="@layout/item_recipe_card" />
+        tools:listitem="@layout/item_category_recipe_card" />
 
 </android.support.constraint.ConstraintLayout>
