--- a/app/src/main/res/layout/item_label.xml
+++ b/app/src/main/res/layout/item_label.xml
@@ -10,8 +10,8 @@
         android:id="@+id/item_label_image"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_marginLeft="2dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/item_label_image"
@@ -21,12 +21,12 @@
         android:id="@+id/item_label_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="4dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textSize="14sp"
-        android:textStyle="italic"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/item_label_image"
         app:layout_constraintLeft_toRightOf="@+id/item_label_image"
         app:layout_constraintTop_toTopOf="@+id/item_label_image"
@@ -50,13 +50,15 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/item_label_inner_list"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
+        android:layout_height="255dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="0dp"
         android:clipChildren="true"
         android:orientation="horizontal"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
         android:scrollbars="none"
         app:layoutManager="LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
