--- a/app/src/main/res/layout/item_label.xml
+++ b/app/src/main/res/layout/item_label.xml
@@ -15,7 +15,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/item_label_image"
-        tools:ignore="RtlHardcoded" />
+        tools:ignore="ContentDescription,RtlHardcoded" />
 
     <TextView
         android:id="@+id/item_label_name"
@@ -50,12 +50,13 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/item_label_inner_list"
         android:layout_width="0dp"
-        android:layout_height="255dp"
+        android:layout_height="300dp"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
-        android:clipChildren="true"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:orientation="horizontal"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
@@ -65,6 +66,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_label_image"
-        tools:listitem="@layout/item_recipe_card" />
+        tools:listitem="@layout/item_label_recipe_card" />
 
 </android.support.constraint.ConstraintLayout>
