Update ui - favorite button

--- a/app/src/main/res/layout/item_recipe_card_front.xml
+++ b/app/src/main/res/layout/item_recipe_card_front.xml
@@ -45,7 +45,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
         android:fontFamily="serif"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:maxLines="2"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="18sp"
@@ -84,7 +84,7 @@
         android:id="@+id/item_recipe_front_bt_fav"
         style="@style/IconButton"
         android:layout_width="0dp"
-        android:layout_height="42dp"
+        android:layout_height="48dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/item_recipe_front_bt_vertical_divider"
         app:layout_constraintTop_toBottomOf="@+id/item_recipe_front_bt_horizontal_divider"
@@ -95,7 +95,7 @@
         android:id="@+id/item_recipe_front_bt_flip"
         style="@style/IconButton"
         android:layout_width="0dp"
-        android:layout_height="42dp"
+        android:layout_height="48dp"
         app:layout_constraintLeft_toRightOf="@+id/item_recipe_front_bt_vertical_divider"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_recipe_front_bt_horizontal_divider"
