--- a/app/src/main/res/layout/item_recipe_card_back.xml
+++ b/app/src/main/res/layout/item_recipe_card_back.xml
@@ -145,7 +145,7 @@
 
     <ImageButton
         android:id="@+id/item_recipe_back_bt_flip"
-        style="@style/IconButton"
+        style="@style/RippleButton"
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:rotation="180"
@@ -156,16 +156,24 @@
         app:srcCompat="@drawable/item_recipe_bt_flip_on"
         tools:ignore="ContentDescription" />
 
-    <ImageButton
-        android:id="@+id/item_recipe_back_bt_fav"
-        style="@style/IconButton"
+    <FrameLayout
+        android:id="@+id/item_recipe_back_bt_fav_frame"
+        style="@style/RippleButton"
         android:layout_width="0dp"
         android:layout_height="48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/item_recipe_back_bt_vertical_divider"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_recipe_back_bt_horizontal_divider"
-        app:srcCompat="@drawable/item_recipe_bt_fav_off"
-        tools:ignore="ContentDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/item_recipe_back_bt_horizontal_divider">
+
+        <ImageView
+            android:id="@+id/item_recipe_back_bt_fav_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/item_recipe_bt_fav_off"
+            tools:ignore="ContentDescription" />
+
+    </FrameLayout>
 
 </android.support.constraint.ConstraintLayout>
