--- a/app/src/main/res/layout/item_category_group.xml
+++ b/app/src/main/res/layout/item_category_group.xml
@@ -22,17 +22,23 @@
 
     <TextView
         android:id="@+id/item_category_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         android:layout_marginTop="8dp"
         android:fontFamily="serif"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="8dp"
+        android:paddingRight="48dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="RtlHardcoded"
+        tools:ignore="ContentDescription,RtlHardcoded"
         tools:text="Category name" />
 
     <ProgressBar
@@ -40,12 +46,14 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:layout_marginBottom="0dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:indeterminate="true"
         android:indeterminateTint="@color/primary"
+        app:layout_constraintBottom_toBottomOf="@+id/item_category_name"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/item_category_name"
         tools:ignore="RtlHardcoded"
         tools:targetApi="lollipop" />
 
