--- a/app/src/main/res/layout/item_recipe_card_front.xml
+++ b/app/src/main/res/layout/item_recipe_card_front.xml
@@ -41,9 +41,10 @@
         android:id="@+id/item_recipe_front_name"
         android:layout_width="0dp"
         android:layout_height="52dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="8dp"
         android:fontFamily="serif"
         android:gravity="center"
         android:maxLines="2"
@@ -60,9 +61,10 @@
         android:id="@+id/item_recipe_front_bt_horizontal_divider"
         android:layout_width="0dp"
         android:layout_height="1dp"
+        android:layout_marginEnd="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="4dp"
         android:background="@color/gray_100"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -80,20 +82,28 @@
         app:layout_constraintTop_toBottomOf="@+id/item_recipe_front_bt_horizontal_divider"
         app:layout_constraintVertical_bias="0.0" />
 
-    <ImageButton
-        android:id="@+id/item_recipe_front_bt_fav"
-        style="@style/IconButton"
+    <FrameLayout
+        android:id="@+id/item_recipe_front_bt_fav_frame"
+        style="@style/RippleButton"
         android:layout_width="0dp"
         android:layout_height="48dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/item_recipe_front_bt_vertical_divider"
-        app:layout_constraintTop_toBottomOf="@+id/item_recipe_front_bt_horizontal_divider"
-        app:srcCompat="@drawable/item_recipe_bt_fav_off"
-        tools:ignore="ContentDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/item_recipe_front_bt_horizontal_divider">
+
+        <ImageView
+            android:id="@+id/item_recipe_front_bt_fav_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/item_recipe_bt_fav_off"
+            tools:ignore="ContentDescription" />
+
+    </FrameLayout>
 
     <ImageButton
         android:id="@+id/item_recipe_front_bt_flip"
-        style="@style/IconButton"
+        style="@style/RippleButton"
         android:layout_width="0dp"
         android:layout_height="48dp"
         app:layout_constraintLeft_toRightOf="@+id/item_recipe_front_bt_vertical_divider"
