--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -14,7 +14,7 @@
         <item name="android:gravity">left|center_vertical</item>
     </style>
 
-    <style name="IconButton" parent="@style/Widget.AppCompat.Button.Borderless">
+    <style name="RippleButton" parent="@style/Widget.AppCompat.Button.Borderless">
         <item name="android:background">?attr/selectableItemBackground</item>
     </style>
 
