--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -2,34 +2,39 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_recipe_details_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:contextRef="com.alsash.reciper.ui.activity.RecipeDetailActivity">
+    tools:contextRef="com.alsash.reciper.ui.activity.RecipeDetailsActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/activity_recipe_detail_appbar"
+        android:id="@+id/activity_recipe_details_appbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/activity_recipe_detail_appbar_height"
+        android:layout_height="256dp"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/activity_recipe_detail_toolbar_layout"
+            android:id="@+id/activity_recipe_details_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:collapsedTitleGravity="start|top"
+            app:collapsedTitleTextAppearance="@style/TextAppearance.RecipeTitle.Collapsed"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMargin="32dp"
-            app:expandedTitleMarginBottom="64dp"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+            app:expandedTitleMarginBottom="60dp"
+            app:expandedTitleTextAppearance="@style/TextAppearance.RecipeTitle.Expanded"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+            app:statusBarScrim="?attr/colorPrimaryDark"
+            app:toolbarId="@+id/activity_recipe_details_toolbar">
 
             <ImageView
-                android:id="@+id/activity_recipe_detail_toolbar_image"
+                android:id="@+id/activity_recipe_details_toolbar_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:adjustViewBounds="false"
+                android:adjustViewBounds="true"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
@@ -37,44 +42,50 @@
                 tools:ignore="ContentDescription" />
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/activity_recipe_detail_toolbar"
+                android:id="@+id/activity_recipe_details_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="104dp"
+                android:layout_height="96dp"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:titleMarginTop="16dp" />
 
             <android.support.design.widget.TabLayout
-                android:id="@+id/activity_recipe_detail_tabs"
+                android:id="@+id/activity_recipe_details_tabs"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_gravity="bottom"
+                android:layout_marginRight="76dp"
                 app:layout_collapseMode="pin"
-                app:paddingEnd="72dp"
-                app:tabIndicatorColor="@color/white"
+                app:tabGravity="center"
+                app:tabIndicatorColor="@color/primary"
                 app:tabMode="scrollable"
-                app:tabTextAppearance="@style/TextAppearance.Design.Tab" />
+                app:tabTextAppearance="@style/TextAppearance.RecipeTitle.Tab"
+                tools:ignore="RtlHardcoded" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/activity_recipe_detail_pager"
+    <com.alsash.reciper.ui.view.SwipeViewPager
+        android:id="@+id/activity_recipe_details_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:svp_is_swipe_enabled="true" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/activity_recipe_detail_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:tint="@color/white"
-        app:layout_anchor="@id/activity_recipe_detail_appbar"
+        android:tint="@color/primary"
+        app:backgroundTint="@color/gray_100"
+        app:elevation="4dp"
+        app:fabSize="normal"
+        app:layout_anchor="@id/activity_recipe_details_appbar"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@drawable/ic_photo" />
 
-    <include layout="@layout/bottom_recipe_detail" />
+    <include layout="@layout/activity_recipe_details_bottom" />
 
 </android.support.design.widget.CoordinatorLayout>
