--- a/app/src/main/res/layout/view_nutrition_chart.xml
+++ b/app/src/main/res/layout/view_nutrition_chart.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_recipe_front_image_container"
+    android:id="@+id/nutrition_chart_constraint"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -15,16 +15,35 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/nutrition_energy"
+        <LinearLayout
+            android:id="@+id/nutrition_energy_layout"
             android:layout_gravity="center"
-            android:background="@drawable/bg_circle_stroke_accent"
+            android:background="@drawable/view_chart_nutrition_energy_circle"
             android:fontFamily="sans-serif-condensed"
             android:gravity="center"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
+            android:orientation="vertical"
             app:layout_aspectRatio="100%"
-            app:layout_widthPercent="28%"
-            tools:text="200\nkCal" />
+            app:layout_widthPercent="24%">
+
+            <TextView
+                android:id="@+id/nutrition_energy_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
+                android:textSize="12sp"
+                tools:text="200" />
+
+            <TextView
+                android:id="@+id/nutrition_energy_unit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
+                android:textSize="12sp"
+                tools:text="kCal" />
+
+        </LinearLayout>
 
     </android.support.percent.PercentFrameLayout>
 
@@ -40,21 +59,21 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.05" />
+        app:layout_constraintGuide_percent="0.055" />
 
     <android.support.constraint.Guideline
         android:id="@+id/nutrition_protein_horizontal_guideline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.17" />
+        app:layout_constraintGuide_percent="0.175" />
 
     <android.support.constraint.Guideline
         android:id="@+id/nutrition_fat_horizontal_guideline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.29" />
+        app:layout_constraintGuide_percent="0.3" />
 
     <android.support.constraint.Guideline
         android:id="@+id/nutrition_vertical_guideline"
@@ -82,35 +101,38 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.29" />
+        app:layout_constraintGuide_percent="0.3" />
 
     <TextView
         android:id="@+id/nutrition_carbohydrate_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="4dp"
         android:background="@drawable/bg_rectangle_stroke_c"
-        android:padding="4dp"
+        android:fontFamily="sans-serif-condensed"
+        android:padding="2dp"
         android:text="@string/nutrition_carbohydrate"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/nutrition_carbohydrate"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_carbohydrate_horizontal_guideline"
         app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_guideline"
         app:layout_constraintTop_toTopOf="@+id/nutrition_carbohydrate_horizontal_guideline"
         tools:ignore="RtlHardcoded" />
 
-
     <TextView
         android:id="@+id/nutrition_protein_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="4dp"
         android:background="@drawable/bg_rectangle_stroke_p"
-        android:padding="4dp"
+        android:fontFamily="sans-serif-condensed"
+        android:padding="2dp"
         android:text="@string/nutrition_protein"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/nutrition_protein"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_protein_horizontal_guideline"
         app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_guideline"
         app:layout_constraintTop_toTopOf="@+id/nutrition_protein_horizontal_guideline"
@@ -120,12 +142,14 @@
         android:id="@+id/nutrition_fat_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="4dp"
         android:background="@drawable/bg_rectangle_stroke_f"
-        android:padding="4dp"
+        android:fontFamily="sans-serif-condensed"
+        android:padding="2dp"
         android:text="@string/nutrition_fat"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/nutrition_fat"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_fat_horizontal_guideline"
         app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_guideline"
         app:layout_constraintTop_toTopOf="@+id/nutrition_fat_horizontal_guideline"
@@ -133,7 +157,7 @@
 
     <View
         android:id="@+id/nutrition_carbohydrate_title_bg_line"
-        android:layout_width="8dp"
+        android:layout_width="4dp"
         android:layout_height="1dp"
         android:background="@color/nutrition_carbohydrate_bg"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_carbohydrate_horizontal_guideline"
@@ -142,7 +166,7 @@
 
     <View
         android:id="@+id/nutrition_protein_title_bg_line"
-        android:layout_width="8dp"
+        android:layout_width="4dp"
         android:layout_height="1dp"
         android:background="@color/nutrition_protein_bg"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_protein_horizontal_guideline"
@@ -151,7 +175,7 @@
 
     <View
         android:id="@+id/nutrition_fat_title_bg_line"
-        android:layout_width="8dp"
+        android:layout_width="4dp"
         android:layout_height="1dp"
         android:background="@color/nutrition_fat_bg"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_fat_horizontal_guideline"
@@ -162,11 +186,13 @@
         android:id="@+id/nutrition_carbohydrate_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/bg_rectangle_stroke_c"
-        android:padding="4dp"
+        android:fontFamily="sans-serif-condensed"
+        android:padding="2dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/nutrition_carbohydrate"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_guideline"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_carbohydrate_vertical_guideline"
@@ -177,11 +203,13 @@
         android:id="@+id/nutrition_protein_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/bg_rectangle_stroke_p"
-        android:padding="4dp"
+        android:fontFamily="sans-serif-condensed"
+        android:padding="2dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/nutrition_protein"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_guideline"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_protein_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_protein_vertical_guideline"
@@ -191,11 +219,13 @@
         android:id="@+id/nutrition_fat_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/bg_rectangle_stroke_f"
-        android:padding="4dp"
+        android:fontFamily="sans-serif-condensed"
+        android:padding="2dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/nutrition_fat"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_guideline"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_fat_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_fat_vertical_guideline"
@@ -204,7 +234,7 @@
     <View
         android:id="@+id/nutrition_carbohydrate_value_bg_line"
         android:layout_width="1dp"
-        android:layout_height="8dp"
+        android:layout_height="4dp"
         android:background="@color/nutrition_carbohydrate_bg"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_carbohydrate_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_carbohydrate_vertical_guideline"
@@ -213,7 +243,7 @@
     <View
         android:id="@+id/nutrition_protein_value_bg_line"
         android:layout_width="1dp"
-        android:layout_height="8dp"
+        android:layout_height="4dp"
         android:background="@color/nutrition_protein_bg"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_protein_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_protein_vertical_guideline"
@@ -222,7 +252,7 @@
     <View
         android:id="@+id/nutrition_fat_value_bg_line"
         android:layout_width="1dp"
-        android:layout_height="8dp"
+        android:layout_height="4dp"
         android:background="@color/nutrition_fat_bg"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_fat_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_fat_vertical_guideline"
@@ -233,7 +263,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:apsv_animated="true"
-        app:apsv_animation_duration="@integer/circle_chart_anim_ms"
+        app:apsv_animation_duration="@integer/nutrition_chart_anim_ms"
         app:apsv_dragged="false"
         app:apsv_draw_width="65%"
         app:apsv_indicator_orientation="horizontal"
