--- a/app/src/main/res/layout/fragment_recipe_details_description.xml
+++ b/app/src/main/res/layout/fragment_recipe_details_description.xml
@@ -1,36 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fragment_recipe_details_nsv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/fragment_recipe_details_description_card"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/fragment_recipe_details_cards_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        app:cardElevation="4dp"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true"
-        app:contentPadding="8dp">
+        android:orientation="vertical">
 
-        <include layout="@layout/view_recipe_description" />
+        <android.support.v7.widget.CardView
+            android:id="@+id/fragment_recipe_details_description_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardElevation="4dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:contentPadding="8dp">
 
-    </android.support.v7.widget.CardView>
+            <include layout="@layout/view_recipe_description" />
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/fragment_recipe_details_nutrition_card"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        app:cardElevation="4dp"
-        app:cardPreventCornerOverlap="false"
-        app:cardUseCompatPadding="true"
-        app:contentPadding="8dp">
+        </android.support.v7.widget.CardView>
 
-        <include layout="@layout/view_recipe_nutrition" />
+        <android.support.v7.widget.CardView
+            android:id="@+id/fragment_recipe_details_nutrition_card"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardElevation="4dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
+            app:contentPadding="8dp">
 
-    </android.support.v7.widget.CardView>
+            <include layout="@layout/view_recipe_nutrition" />
 
-</LinearLayout>
+        </android.support.v7.widget.CardView>
+
+        <!--Space for scrolling nutrition card up-->
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="24dp" />
+
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
