--- a/app/src/main/res/layout/view_recipe_nutrition.xml
+++ b/app/src/main/res/layout/view_recipe_nutrition.xml
@@ -55,11 +55,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recipe_nutrition_horizontal_divider">
 
-        <include
-            layout="@layout/view_nutrition_chart"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_gravity="center"
             app:layout_aspectRatio="100%"
-            app:layout_widthPercent="100%" />
+            app:layout_widthPercent="100%">
+
+            <include layout="@layout/view_nutrition_chart" />
+
+        </FrameLayout>
     </android.support.percent.PercentFrameLayout>
 </android.support.constraint.ConstraintLayout>
