--- a/app/src/main/res/layout/view_nutrition_chart.xml
+++ b/app/src/main/res/layout/view_nutrition_chart.xml
@@ -15,35 +15,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
-            android:id="@+id/nutrition_energy_layout"
+        <TextView
+            android:id="@+id/nutrition_energy"
+            android:layout_width="0dp"
             android:layout_gravity="center"
             android:background="@drawable/view_chart_nutrition_energy_circle"
             android:fontFamily="sans-serif-condensed"
             android:gravity="center"
-            android:orientation="vertical"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
+            android:textSize="16sp"
             app:layout_aspectRatio="100%"
-            app:layout_widthPercent="25%">
-
-            <TextView
-                android:id="@+id/nutrition_energy_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
-                android:textSize="14sp"
-                tools:text="200" />
-
-            <TextView
-                android:id="@+id/nutrition_energy_unit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-condensed"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
-                android:textSize="14sp"
-                tools:text="kCal" />
-
-        </LinearLayout>
+            app:layout_widthPercent="25%"
+            tools:text="200\nCal" />
 
     </android.support.percent.PercentFrameLayout>
 
