--- a/app/src/main/res/layout/view_recipe_nutrition.xml
+++ b/app/src/main/res/layout/view_recipe_nutrition.xml
@@ -49,7 +49,10 @@
         android:id="@+id/recipe_nutrition_chart_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
